--- a/app/globals.css
+++ b/app/globals.css
@@ -112,6 +112,10 @@
   --sidebar-ring: oklch(0.551 0.027 264.364);
 }
 
+.top-special {
+  top: 27.5%;
+}
+
 @layer base {
   * {
     @apply border-border outline-ring/50;
